# MITWindfarm

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  pytest.yml
checks/: check_lineavg.py
examples/: MITWindfarm_quickstart.ipynb  example_01_layout.py  example_02_rotor.py  example_03_wake.py  example_04_superposition.py  example_05_basic_windfarm.py  example_06_yaw_optimisation.py  example_07_BEM_yaw_optimisation.py  example_07_reference_turbines.py  example_08_BEM_tilt_optimization.py  example_08_curled_windfarm.py  example_08_tilt_optimization.py  example_08_yaw_tilt_optimization.py  example_09_BEM_tilt_optimization.py  example_10_BEM_yaw_tilt.py
mitwindfarm/: CurledWake.py  Layout.py  Plotting.py  ReferenceCurve.py  Rotor.py  RotorGrid.py  SetpointCurve.py  Superposition.py  ThrustCurve.py  Wake.py  Windfield.py  _Layout.py  __init__.py  windfarm copy.py  windfarm.py
mitwindfarm/utils/: differentiate.py  integrate.py
tests/: test_curled_wake.py  test_layout.py  test_rotor.py  test_wake.py  test_windfarm.py  test_windfield.py
