[tool.poetry]
name = "mitwindfarm"
version = "1.0.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.16.5"
scipy = ">=1.6"
mitrotor = { git = "https://github.com/Howland-Lab/MITRotor.git" }
unified-momentum-model = { git = "https://github.com/Howland-Lab/Unified-Momentum-Model.git" }

[tool.poetry.group.dev.dependencies]
ipython = "^8"
jupyter = "^1.0.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
ruff = "^0.1.7"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
