[tool.poetry]
name = "mitwindfarm"
version = "1.0.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.16.5"
scipy = ">=1.6"
mitrotor = { git = "https://github.com/Howland-Lab/MITRotor.git", branch = "add-NREL-5MW" }
unified-momentum-model = { git = "https://github.com/Howland-Lab/Unified-Momentum-Model.git" }
rick = "^0.6.8"
rich = "^13.7.1"
matplotlib = "^3.9.1.post1"

[tool.poetry.group.dev.dependencies]
ipython = "^8"
jupyter = "^1.0.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
ruff = "^0.1.7"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
