[tool.poetry]
name = "mitwindfarm"
version = "1.0.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.16.5"
scipy = ">=1.6"
mitrotor = { git = "https://github.com/Howland-Lab/MITRotor.git", branch = "sg/tilted_BEM"}
unified-momentum-model = { git = "https://github.com/Howland-Lab/Unified-Momentum-Model.git"}
# [tool.poetry.group.dev.dependencies]
ipython = { version = "^8", optional = true}
jupyter = { version = "^1.0.0", optional = true}
mypy = { version = "^1.5.1", optional = true}
pytest = { version = "^7.4.2", optional = true}
ruff = { version = "^0.1.7", optional = true}
ipykernel = { version = "^6.25.1", optional = true}
matplotlib = { version = "^3.9.2", optional = true}

[tool.poetry.extras]
dev = ["ipython", "jupyter", "mypy", "pytest", "ruff", "ipykernel", "matplotlib"]
examples = ["matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
